specs/blueprints/errors/validation/expected_fields_got_section.eno
# Expecting fields but getting an empty section

-- input
# section
-- input

-- javascript
eno.parse(input).fields('section');
-- javascript

-- php
Eno\Parser::parse($input)->fields('section');
-- php

-- python
enolib.parse(input).fields('section')
-- python

-- ruby
Eno.parse(input).fields('section')
-- ruby

## ValidationError

-- text
Only fields with the key 'section' were expected, but a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
-- snippet

selection: [0,0] => [0,9]


# Expecting fields but getting a section with a field and a list

-- input
# section

field: value

list:
- item
- item
-- input

-- javascript
eno.parse(input).fields('section');
-- javascript

-- php
Eno\Parser::parse($input)->fields('section');
-- php

-- python
enolib.parse(input).fields('section')
-- python

-- ruby
Eno.parse(input).fields('section')
-- ruby

## ValidationError

-- text
Only fields with the key 'section' were expected, but a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | field: value
   ...
-- snippet

selection: [0,0] => [6,6]

# Expecting fields but getting a section with subsections

-- input
# section

## subsection

field: value

## subsection

list:
- item
- item
-- input

-- javascript
eno.parse(input).fields('section');
-- javascript

-- php
Eno\Parser::parse($input)->fields('section');
-- php

-- python
enolib.parse(input).fields('section')
-- python

-- ruby
Eno.parse(input).fields('section')
-- ruby

## ValidationError

-- text
Only fields with the key 'section' were expected, but a section with this key was found.
-- text

-- snippet
   Line | Content
 >    1 | # section
      2 | 
      3 | ## subsection
   ...
-- snippet

selection: [0,0] => [10,6]
